# LightReflection

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
docs/: lenses-and-mirrors-tasks.md
src/: geometric_optics.cpp  geometric_optics.h  lens_mode.cpp  main.cpp  mirror.cpp  mirror.h  mirror_mode.cpp  optics.cpp  optics.h  prism.cpp  ray.cpp  ray.h  reflection.cpp  refraction.cpp  simulation.h  vector2.h
